compiler/testData/diagnostics/tests/inference/capturedTypes/kt2872.fir.kt
// !WITH_NEW_INFERENCE
fun <T> Array<T>.foo() {}

fun test(array: Array<out Int>) {
    array.foo()
    array.<!INAPPLICABLE_CANDIDATE!>foo<!><out Int>()
}